[gd_scene load_steps=36 format=2]

[ext_resource path="res://Assets/images/chars/NicePng_mage-png_3499950.png" type="Texture" id=1]
[ext_resource path="res://scenes/UI/Fighting/FightScene.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/Fighting/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI/Fighting/FightSceneHover.gd" type="Script" id=4]
[ext_resource path="res://scenes/UI/Fighting/StatusBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/UI/Fighting/BigBox.gd" type="Script" id=6]
[ext_resource path="res://scenes/UI/Fighting/FighterTimeLine.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/images/bars/select.png" type="Texture" id=8]
[ext_resource path="res://Assets/Animations/Attacks/Test/30FPS_ACCK001_Gash.png" type="Texture" id=9]
[ext_resource path="res://Assets/Animations/Attacks/Test/30FPS_ACCK004_Bludgeon.png" type="Texture" id=10]
[ext_resource path="res://Assets/Animations/Attacks/Test/TestAnimations.tres" type="SpriteFrames" id=11]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 768, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 192, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 384, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 576, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 768, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 192, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 384, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 576, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 768, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 768, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 384, 192, 192, 192 )

[sub_resource type="SpriteFrames" id=24]
resource_name = "TestAttack"
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "Test02",
"speed": 30.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "Test01",
"speed": 30.0
} ]

[node name="FightScene" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 1080, 960 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FighterTimeLine" parent="." instance=ExtResource( 7 )]
anchor_bottom = 0.0
rect_min_size = Vector2( 0, 40 )

[node name="BigBox" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 500.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Teams" type="VBoxContainer" parent="BigBox"]
margin_right = 1040.0
margin_bottom = 904.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopTeam" type="MarginContainer" parent="BigBox/Teams"]
margin_right = 1040.0
margin_bottom = 450.0

[node name="FightersRoster" type="HBoxContainer" parent="BigBox/Teams/TopTeam"]
margin_right = 1040.0
margin_bottom = 450.0

[node name="MarginContainer" type="MarginContainer" parent="BigBox/Teams/TopTeam/FightersRoster"]
margin_right = 220.0
margin_bottom = 450.0

[node name="HPImage" type="VBoxContainer" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer"]
margin_right = 220.0
margin_bottom = 450.0
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer/HPImage"]
margin_right = 220.0
margin_bottom = 410.0

[node name="TextureRect" type="TextureRect" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer/HPImage/CenterContainer"]
margin_right = 220.0
margin_bottom = 410.0
rect_min_size = Vector2( 220, 410 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer/HPImage/CenterContainer/TextureRect"]
light_mask = 63
position = Vector2( 98.8882, 211.261 )
frames = SubResource( 24 )
animation = "Test02"

[node name="TextureRect" type="TextureRect" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer/HPImage"]
visible = false
margin_top = 410.0
margin_right = 220.0
margin_bottom = 410.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="StatusBar" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer/HPImage" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 410.0
margin_right = 220.0
margin_bottom = 430.0

[node name="HealthBar" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer/HPImage" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 430.0
margin_right = 220.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 20 )
value = 100

[node name="Button" type="Button" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer"]
margin_right = 220.0
margin_bottom = 450.0
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="BigBox/Teams/TopTeam/FightersRoster"]
margin_left = 224.0
margin_right = 444.0
margin_bottom = 450.0

[node name="HPImage2" type="VBoxContainer" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer2"]
margin_right = 220.0
margin_bottom = 450.0
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer2/HPImage2"]
margin_right = 220.0
margin_bottom = 410.0

[node name="TextureRect" type="TextureRect" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer2/HPImage2/CenterContainer"]
margin_right = 220.0
margin_bottom = 410.0
rect_min_size = Vector2( 220, 410 )
expand = true
stretch_mode = 6
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer2/HPImage2/CenterContainer/TextureRect"]
position = Vector2( 115.966, 231.931 )
frames = ExtResource( 11 )
animation = "TestHeal"

[node name="TextureRect2" type="TextureRect" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer2/HPImage2"]
visible = false
margin_top = 410.0
margin_right = 220.0
margin_bottom = 410.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="StatusBar" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer2/HPImage2" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 410.0
margin_right = 220.0
margin_bottom = 430.0

[node name="HealthBar" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer2/HPImage2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 430.0
margin_right = 220.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 20 )
value = 100

[node name="Button2" type="Button" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer2"]
margin_right = 220.0
margin_bottom = 450.0
flat = true

[node name="MarginContainer3" type="MarginContainer" parent="BigBox/Teams/TopTeam/FightersRoster"]
margin_left = 448.0
margin_right = 668.0
margin_bottom = 450.0

[node name="HPImage3" type="VBoxContainer" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer3"]
margin_right = 220.0
margin_bottom = 450.0
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer3/HPImage3"]
margin_right = 220.0
margin_bottom = 410.0

[node name="TextureRect" type="TextureRect" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer3/HPImage3/CenterContainer"]
margin_right = 220.0
margin_bottom = 410.0
rect_min_size = Vector2( 220, 410 )
expand = true
stretch_mode = 6
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer3/HPImage3/CenterContainer/TextureRect"]
position = Vector2( 72.1249, 230.517 )
frames = ExtResource( 11 )
animation = "TestHeal"

[node name="TextureRect3" type="TextureRect" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer3/HPImage3"]
visible = false
margin_top = 410.0
margin_right = 220.0
margin_bottom = 410.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="StatusBar" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer3/HPImage3" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 410.0
margin_right = 220.0
margin_bottom = 430.0

[node name="HealthBar" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer3/HPImage3" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 430.0
margin_right = 220.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 20 )
value = 100

[node name="Button3" type="Button" parent="BigBox/Teams/TopTeam/FightersRoster/MarginContainer3"]
margin_right = 220.0
margin_bottom = 450.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopTeam2" type="MarginContainer" parent="BigBox/Teams"]
margin_top = 454.0
margin_right = 1040.0
margin_bottom = 904.0

[node name="FightersRoster" type="HBoxContainer" parent="BigBox/Teams/TopTeam2"]
margin_right = 1040.0
margin_bottom = 450.0

[node name="MarginContainer" type="MarginContainer" parent="BigBox/Teams/TopTeam2/FightersRoster"]
margin_right = 220.0
margin_bottom = 450.0

[node name="HPImage" type="VBoxContainer" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer"]
margin_right = 220.0
margin_bottom = 450.0
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer/HPImage"]
margin_right = 220.0
margin_bottom = 410.0

[node name="TextureRect" type="TextureRect" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer/HPImage/CenterContainer"]
margin_right = 220.0
margin_bottom = 410.0
rect_min_size = Vector2( 220, 410 )
expand = true
stretch_mode = 6
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer/HPImage/CenterContainer/TextureRect"]
position = Vector2( 96.1665, 159.806 )
frames = ExtResource( 11 )
animation = "TestHeal"

[node name="TextureRect4" type="TextureRect" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer/HPImage"]
visible = false
margin_top = 410.0
margin_right = 220.0
margin_bottom = 410.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="StatusBar" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer/HPImage" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 410.0
margin_right = 220.0
margin_bottom = 430.0

[node name="HealthBar" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer/HPImage" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 430.0
margin_right = 220.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 20 )
value = 100

[node name="Button4" type="Button" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer"]
margin_right = 220.0
margin_bottom = 450.0
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="BigBox/Teams/TopTeam2/FightersRoster"]
margin_left = 224.0
margin_right = 444.0
margin_bottom = 450.0

[node name="HPImage2" type="VBoxContainer" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer2"]
margin_right = 220.0
margin_bottom = 450.0
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer2/HPImage2"]
margin_right = 220.0
margin_bottom = 410.0

[node name="TextureRect" type="TextureRect" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer2/HPImage2/CenterContainer"]
margin_right = 220.0
margin_bottom = 410.0
rect_min_size = Vector2( 220, 410 )
expand = true
stretch_mode = 6
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer2/HPImage2/CenterContainer/TextureRect"]
position = Vector2( 77.7818, 173.948 )
frames = ExtResource( 11 )
animation = "TestHeal"

[node name="TextureRect5" type="TextureRect" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer2/HPImage2"]
visible = false
margin_top = 410.0
margin_right = 220.0
margin_bottom = 410.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="StatusBar" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer2/HPImage2" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 410.0
margin_right = 220.0
margin_bottom = 430.0

[node name="HealthBar" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer2/HPImage2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 430.0
margin_right = 220.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 20 )
value = 100

[node name="Button5" type="Button" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer2"]
margin_right = 220.0
margin_bottom = 450.0
flat = true

[node name="MarginContainer3" type="MarginContainer" parent="BigBox/Teams/TopTeam2/FightersRoster"]
margin_left = 448.0
margin_right = 668.0
margin_bottom = 450.0

[node name="HPImage3" type="VBoxContainer" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer3"]
margin_right = 220.0
margin_bottom = 450.0
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer3/HPImage3"]
margin_right = 220.0
margin_bottom = 410.0

[node name="TextureRect" type="TextureRect" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer3/HPImage3/CenterContainer"]
margin_right = 220.0
margin_bottom = 410.0
rect_min_size = Vector2( 220, 410 )
expand = true
stretch_mode = 6
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer3/HPImage3/CenterContainer/TextureRect"]
position = Vector2( 76.3676, 182.434 )
frames = ExtResource( 11 )
animation = "TestHeal"
frame = 29

[node name="TextureRect6" type="TextureRect" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer3/HPImage3"]
visible = false
margin_top = 410.0
margin_right = 220.0
margin_bottom = 410.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="StatusBar" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer3/HPImage3" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 410.0
margin_right = 220.0
margin_bottom = 430.0

[node name="HealthBar" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer3/HPImage3" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 430.0
margin_right = 220.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 20 )
value = 100

[node name="Button6" type="Button" parent="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer3"]
margin_right = 220.0
margin_bottom = 450.0
flat = true
[connection signal="down" from="BigBox" to="." method="_on_BigBox_down"]
[connection signal="up" from="BigBox" to="." method="_on_BigBox_up"]
[connection signal="animation_finished" from="BigBox/Teams/TopTeam/FightersRoster/MarginContainer/HPImage/CenterContainer/TextureRect/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="button_down" from="BigBox/Teams/TopTeam/FightersRoster/MarginContainer/Button" to="BigBox" method="_on_Button_button_down"]
[connection signal="button_up" from="BigBox/Teams/TopTeam/FightersRoster/MarginContainer/Button" to="BigBox" method="_on_Button_button_up"]
[connection signal="animation_finished" from="BigBox/Teams/TopTeam/FightersRoster/MarginContainer2/HPImage2/CenterContainer/TextureRect/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="button_down" from="BigBox/Teams/TopTeam/FightersRoster/MarginContainer2/Button2" to="BigBox" method="_on_Button2_button_down"]
[connection signal="button_up" from="BigBox/Teams/TopTeam/FightersRoster/MarginContainer2/Button2" to="BigBox" method="_on_Button2_button_up"]
[connection signal="animation_finished" from="BigBox/Teams/TopTeam/FightersRoster/MarginContainer3/HPImage3/CenterContainer/TextureRect/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="button_down" from="BigBox/Teams/TopTeam/FightersRoster/MarginContainer3/Button3" to="BigBox" method="_on_Button3_button_down"]
[connection signal="button_up" from="BigBox/Teams/TopTeam/FightersRoster/MarginContainer3/Button3" to="BigBox" method="_on_Button3_button_up"]
[connection signal="animation_finished" from="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer/HPImage/CenterContainer/TextureRect/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="button_down" from="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer/Button4" to="BigBox" method="_on_Button4_button_down"]
[connection signal="button_up" from="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer/Button4" to="BigBox" method="_on_Button4_button_up"]
[connection signal="animation_finished" from="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer2/HPImage2/CenterContainer/TextureRect/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="button_down" from="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer2/Button5" to="BigBox" method="_on_Button5_button_down"]
[connection signal="button_up" from="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer2/Button5" to="BigBox" method="_on_Button5_button_up"]
[connection signal="animation_finished" from="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer3/HPImage3/CenterContainer/TextureRect/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="button_down" from="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer3/Button6" to="BigBox" method="_on_Button6_button_down"]
[connection signal="button_up" from="BigBox/Teams/TopTeam2/FightersRoster/MarginContainer3/Button6" to="BigBox" method="_on_Button6_button_up"]
